[package]
name = "normal_pack"
version = "0.1.0"
edition = "2021"

[features]
half = ["dep:half"]
serde = ["dep:serde", "half/serde"]
bytemuck = ["dep:bytemuck", "half/bytemuck"]
zerocopy = ["dep:zerocopy", "half/zerocopy"]
rkyv = ["dep:rkyv", "half/rkyv"]

[dependencies]
half = { version = "2.4.1", optional = true }
serde = { version = "1.0", optional = true, default-features = false, features = [
  "derive",
] }
bytemuck = { version = "1.16.1", default-features = false, features = [
  "derive",
], optional = true }
zerocopy = { version = "0.6.6", optional = true }
rkyv = { version = "0.7", optional = true }

[dev-dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
static_assertions = "1.1.0"
bytemuck = { version = "1.16.1", features = ["derive"] }
zerocopy = { version = "0.6.6" }
rkyv = { version = "0.7" }
