[package]
name = "normal_pack"
version = "0.1.4"
edition = "2021"
rust-version = "1.60.0"
authors = ["David Huculak https://github.com/Davidster"]
description = "Compresses normal vectors (or any 3D unit vector) using Octahedron encoding."
repository = "https://github.com/Davidster/normal_pack"
readme = "README.md"
license = "MIT"
categories = ["encoding"]
keywords = ["normal", "vector", "compress"]
exclude = ["Cargo.lock", "examples"]

[features]
half = ["dep:half"]
serde = ["dep:serde", "half/serde"]
bytemuck = ["dep:bytemuck", "half/bytemuck"]
zerocopy = ["dep:zerocopy", "half/zerocopy"]
rkyv = ["dep:rkyv", "half/rkyv"]

[dependencies]
half = { version = "2", optional = true }
serde = { version = "1", optional = true, default-features = false, features = [
  "derive",
] }
bytemuck = { version = "1", default-features = false, features = [
  "derive",
], optional = true }
zerocopy = { version = "0.6.6", optional = true }
rkyv = { version = "0.7", optional = true }

[dev-dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
static_assertions = "1.1.0"
bytemuck = { version = "1.16.1", features = ["derive"] }
zerocopy = { version = "0.6.6" }
rkyv = { version = "0.7" }

# teapot example deps:
wgpu = { version = "0.20.1", features = ["trace"] }
pollster = "0.3.0"
glam = { version = "0.28.0", features = ["bytemuck"] }
obj-rs = "0.7.1"
image = "0.25.1"
futures-intrusive = "0.5.0"

[package.metadata.docs.rs]
features = ["half"]
